0x07-python-test_driven_development/tests/2-matrix_divided.txt
"""
>>> matrix_divided = __import__('2-matrix_divided').matrix_divided
>>> matrix_divided([[2, 4, 6], [6, 8, 10]], 3)
[[0.67, 1.33, 2.0], [2.0, 2.67, 3.33]]
>>> matrix_divided([[2, 4, 6], [6, 8, 10]], "nope")
Traceback (most recent call last):
TypeError: div must be a number
>>> matrix_divided([[2, 4, 6], [6, 8, 10]], 0)
Traceback (most recent call last):
ZeroDivisionError: division by zero
>>> matrix_divided([["nope", 4, 10j], ["lol", "sucks", 8]], 100)
Traceback (most recent call last):
TypeError: matrix must be a matrix(list of lists) of integers/floats
>>> matrix_divided([[2, 4], [6, 8, 10]], 100)
Traceback (most recent call last):
TypeError: Each row of the matrix must have the same size
>>> matrix_divided([[2, 4], [6, 8, 10]], )
Traceback (most recent call last):
TypeError: matrix_divided() missing 1 required positional argument: 'div'
>>> matrix_divided( , )
  File "<stdin>", line 1
    matrix_divided( , )
                    ^
SyntaxError: invalid syntax
>>>
"""
